test/positive/feature_staticfielddeclaration.java

public class feature_staticfielddeclaration {
  public feature_staticfielddeclaration() {}
  protected static int x;
}

