test/negative/InterfaceFields.java
public interface InterfaceFields {
    public int x;
}
